--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "clsx": "^2.1.1",
+    "emailjs-com": "^3.2.0",
+    "react-hot-toast": "^2.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "next": "15.3.5"
